[gd_scene load_steps=4 format=3 uid="uid://cmmb6ocuhvblt"]

[ext_resource type="Script" path="res://inventory_slot_display.gd" id="1_cwchl"]
[ext_resource type="Texture2D" uid="uid://clhyuphki80ul" path="res://Items/EmptyInventorySlot.png" id="1_xr43f"]
[ext_resource type="FontVariation" uid="uid://biptdagnaqvq6" path="res://PixelRPG.tres" id="3_bke1g"]

[node name="InventorySlotDisplay" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_cwchl")

[node name="ItemTextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
texture = ExtResource("1_xr43f")
stretch_mode = 3

[node name="ItemAmountLabel" type="Label" parent="ItemTextureRect"]
layout_mode = 2
offset_left = 14.0
offset_top = 13.0
offset_right = 27.0
offset_bottom = 22.0
theme_override_fonts/font = ExtResource("3_bke1g")
theme_override_font_sizes/font_size = 6
text = "100"
vertical_alignment = 1

[connection signal="mouse_entered" from="ItemTextureRect" to="." method="_on_item_texture_rect_mouse_entered"]
